--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <a href="https://raw.githubusercontent.com/ert11er/customcmd/main/main.bat" download="main.bat">
-        <button>Download</button>
+        <button>Download main.bat</button>
     </a>
 </body>
 </html>
