--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <a href="https://raw.githubusercontent.com/ert11er/customcmd/main/main.bat" download="main.bat">
+    <a href="blob:https://raw.githubusercontent.com/ert11er/customcmd/main/main.bat" download="main.bat">
         <button>Download main.bat</button>
     </a>
 </body>
